--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	// Fabric API. You probably want it anyway.
 	modImplementation "net.legacyfabric.legacy-fabric-api:legacy-fabric-api:${fabric_version}"
 	// An extra dependency. Uncomment to add.
-	//modImplementation "io.github.boogiemonster1o1:modmenu:0.1.0+1.8.9"
+	modImplementation "io.github.boogiemonster1o1:modmenu:0.1.0+1.8.9"
 
 	// Hacks that make mac os work
 	if (System.getProperty("os.name").toLowerCase().contains("mac")) {
